[tool.poetry]
name = "blocklock"
version = "0.1.0"
description = "An authentication system that uses the Nebl API"
authors = ["Huski3 <huski3@linuxmail.com>"]
license = "GNU Public"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
